@@ -1,20 +1,22 @@
-# This class encapsulates a Meta tag.  Mechanize treats meta tags just like
-# 'a' tags.  Meta objects will contain links, but most likely will have no
-# text.
+##
+# This class encapsulates a meta element with a refresh http-equiv.  Mechanize
+# treats meta refresh elements just like 'a' tags.  MetaRefresh objects will
+# contain links, but most likely will have no text.
 
-class Mechanize::Page::Meta < Mechanize::Page::Link
+class Mechanize::Page::MetaRefresh < Mechanize::Page::Link
 
-  # Matches the content attribute of a meta tag.  After the match:
+  ##
+  # Matches the content attribute of a meta refresh element.  After the match:
   #
   #   $1:: delay
   #   $3:: url
-  #
   CONTENT_REGEXP = /^\s*(\d+\.?\d*)(;|;\s*url=\s*['"]?(\S*?)['"]?)?\s*$/i
 
-  # Parses the delay and url from the content attribute of a meta tag.  Parse
-  # requires the uri of the current page to infer a url when no url is
-  # specified.  If a block is given, the parsed delay and url will be passed
-  # to it for further processing.
+  ##
+  # Parses the delay and url from the content attribute of a meta refresh
+  # element.  Parse requires the uri of the current page to infer a url when
+  # no url is specified.  If a block is given, the parsed delay and url will
+  # be passed to it for further processing.
   #
   # Returns nil if the delay and url cannot be parsed.
   #
@@ -25,7 +27,7 @@ class Mechanize::Page::Meta < Mechanize::Page::Link
   #   Meta.parse("5;url=", uri)                  # => ['5', 'http://example/']
   #   Meta.parse("5", uri)                       # => ['5', 'http://example/']
   #   Meta.parse("invalid content", uri)         # => nil
-  #
+
   def self.parse(content, uri)
     return unless content =~ CONTENT_REGEXP
 
